[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbotsclient"
version = "1.0.4"
dependencies = [
    "pusher", 
    "pysher", 
    "spacy", 
    "Flask",
    "Flask-Cors", 
    "porter2stemmer",
    "pke @ git+ssh://git@github.com/boudinfl/pke.git",
    "nltk"
]